# bot-third-space

./: .env.example  DESIGN3_SECURE.md  DESIGN4_SECURE.md  Makefile  README.md  SKILL.md  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
.github/workflows/: ci.yml
api/: Dockerfile  pyproject.toml
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 20260202_01_initial.py
api/app/: __init__.py  config.py  database.py  main.py
api/app/auth/: __init__.py  api_key.py  dependencies.py  jwt.py  password.py
api/app/middleware/: rate_limit.py
api/app/models/: __init__.py  activity.py  article.py  bulletin.py  idempotency.py  notification.py  profile.py  rate_limit.py  user.py
api/app/routers/: __init__.py  admin.py  auth.py  bulletin.py  inbox.py  library.py  users.py
api/app/schemas/: __init__.py  admin.py  auth.py  bulletin.py  inbox.py  library.py  users.py
api/app/services/: __init__.py  activity.py  idempotency.py
api/scripts/: check_migrations.py  setup_env.py
api/tests/: README.md  __init__.py  conftest.py  factories.py  test_health.py
api/tests/admin/: __init__.py  test_admin_activity.py  test_admin_users.py
api/tests/auth/: __init__.py  test_api_keys.py  test_lockout.py  test_login.py  test_refresh.py  test_register.py
api/tests/bulletin/: test_comments.py  test_follows.py  test_posts.py
api/tests/inbox/: test_inbox.py
api/tests/users/: __init__.py  test_users.py
docs/design/: DESIGN.md  DESIGN2.md  DESIGN3.md
docs/rest/: README.md  admin.http  auth.http  bulletin.http  health.http  http-client.env.json  inbox.http  library.http  users.http
