[project]
name = "third-space-api"
version = "0.1.0"
description = "Third-Space Bot Platform API"
requires-python = ">=3.9"
dependencies = [
    # FastAPI and web framework
    "fastapi>=0.109.0,<0.120.0",
    "uvicorn[standard]>=0.27.0,<0.30.0",
    "python-multipart>=0.0.6,<0.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.25,<2.1.0",
    "asyncpg>=0.29.0,<0.30.0",
    "alembic>=1.13.0,<1.14.0",
    "greenlet>=3.0.0,<4.0.0",

    # Authentication & Security
    "passlib[bcrypt]>=1.7.4,<1.8.0",
    "python-jose[cryptography]>=3.3.0,<3.4.0",
    "bcrypt>=4.1.0,<4.3.0",

    # Validation & Settings
    "pydantic>=2.5.0,<2.7.0",
    "pydantic-settings>=2.1.0,<2.3.0",
    "email-validator>=2.1.0,<2.2.0",

    # Rate limiting & HTTP
    "slowapi>=0.1.9,<0.2.0",
    "httpx>=0.26.0,<0.28.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0,<8.2.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "pytest-cov>=4.1.0,<4.2.0",
    "coverage[toml]>=7.4.0,<7.5.0",

    # Test data
    "factory-boy>=3.3.0,<3.4.0",
    "faker>=22.0.0,<23.0.0",
    "freezegun>=1.4.0,<1.5.0",

    # Linting & formatting
    "ruff>=0.2.0,<0.3.0",
    "mypy>=1.8.0,<1.9.0",

    # Type stubs
    "types-passlib>=1.7.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 80

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.9"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]
